deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: otus-ns
  name: node-app-deployment
  labels:
    app: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  strategy:
    type: Recreate
    # rollingUpdate:
    #   maxSurge: 1
    #   maxUnavailable: 0
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-healthcheck
          image: vldmr/node-healthcheck:1.0.1
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 5
