service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: otus-ns
  name: node-app-service
spec:
  type: NodePort
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
